--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body {
     @apply relative inline-flex rounded-full h-3 w-3 bg-green-500;
   }
 
-  /* hero section */
+  /* hero secthandleCopyion */
   .hero_tag {
     @apply text-center xl:text-6xl md:text-5xl sm:text-4xl text-3xl font-generalsans font-black !leading-normal;
   }
@@ -117,7 +117,7 @@ body {
   }
 
   .work-content_logo {
-    @apply rounded-3xl w-16 h-16 p-2 bg-black-600;
+    @apply rounded-2xl w-16 h-16 p-2 bg-black-600;
   }
 
   .work-content_bar {
